# app/Models/UserPhoto.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class UserPhoto extends Model
+{
+    protected $keyType = 'string';
+    public $timestamps = false;
+    public $incrementing = false;
+
+    protected $fillable = [
+        'image',
+    ];
+
+    public function user() {
+        return $this->belongsTo(User::class);
+    }
+}
