# routes/api.php
@@ -8,4 +8,7 @@ use App\Http\Controllers\API\ProfileController;
 
 Route::post('/login', [LoginController::class, 'login']);
 Route::post('/register', [RegisterController::class, 'register']);
-Route::middleware('auth:api')->get('/profile', [ProfileController::class, 'profile']);
+Route::middleware('auth:api')->group(function () {
+    Route::get('/profile', [ProfileController::class, 'profile']);
+    Route::post('/change-photo', [ProfileController::class, 'changePhoto']);
+});
